<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Please put your application's app ID and keys here -->
    <string name="parse_app_id">1pKjrKTD8PkqWMZNbwisMTbSlXnPw8eH16kn0JG2</string>
    <string name="parse_client_key">lWoRPA81XQ7SW5DcwtIMbQe7nYLQMogGndk0AV7w</string>
    <string name="facebook_app_id">708503052566712</string>
    <string name="app_name">YourPrice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_search">Search</string>
    <string name="action_new">New Post</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Create Account</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="login_progress_password_email">Sending email…</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_duplicate_email">This email address is already in use</string>
    <string name="error_duplicate_username">This username is already in use</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm_password">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_new_item">Post new item</string>
    <string name="action_logout">Logout</string>

    <!-- Strings related to Item Grid -->
    <string name="empty_list_label">No items found</string>
    <string name="item_cell_item_caption">Item Caption</string>

    <!-- Strings related to navigation drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="item_caption">Caption</string>
    <string name="hint_item_desc">Enter caption</string>
    <string name="min_price">Min price</string>
    <string name="hint_price">Enter Price</string>
    <string name="title_activity_preview_photo">Preview</string>
    <string name="saving_item">Saving Item...</string>
    <string name="hint_add_comment">Add comment</string>
    <string name="aviary_app_id">165b751a2efa614d</string>
    <string name="aviary_api_secret">0fa764e9db15b26b</string>
    <string name="comments_title">No comments yet</string>
    <string name="title_upload_photo">Upload New Photo</string>
    <string name="title_edit_item">Edit Item</string>
    <string name="error_enter_caption">Please enter caption</string>
    <string name="error_upload_photo">Please upload a picture</string>
    <string name="bid_amount_low">Your offer amount is very low as per seller</string>
    <string name="bid_amount_high">Your offer amount is very high as per seller</string>
    <string name="bid_amount_last">Your most recent offer amount is </string>
    <string name="bid_amount_submitted">Your offer is submitted successfully</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="save">save</string>
    <string name="label_name">Name</string>
    <string name="hint_name">John Doe</string>
    <string name="label_screenname">Username</string>
    <string name="hint_screenname">johndoe</string>
    <string name="label_about_me">About me</string>
    <string name="hint_description">Tell us about yourself</string>
    <string name="label_location">Location</string>
    <string name="hint_location">City or Zip</string>
    <string name="lable_email">Email</string>
    <string name="hint_email">johndoe@email.com</string>
    <string name="label_website">Website</string>
    <string name="hint_website">johndoe.com</string>
    <string name="saving">saving...</string>
    <string name="error_enter_name">Please enter valid name</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="title_activity_create_item">Post Item</string>
    <string name="title_activity_bid_list">Item Bids</string>
    <string name="hint_type_message">Type Message</string>
    <string name="title_activity_message_list">Offer Messaging</string>
    <string name="btn_bid_accept">ACCEPT</string>
    <string name="btn_bid_reject">REJECT</string>
    <string name="bid_status_label">Offer Status:</string>
    <string name="item_sold">Mark item as sold</string>
    <string name="hint_tap_to_select">Tap to select</string>
    <string name="title_activity_location">Select Location</string>
    <string name="select_location">Select Location</string>
    <string name="offer_confirmation_header">Offer Confirmation</string>
    <string name="offer_confirm_body">Your offer amount is</string>
    <string name="alert_header_generic">YourPrice Message</string>
    <string name="title_activity_image">Image</string>
    <string name="no_internet">Pleace check your Internet connection and try again later</string>
    <string name="bids_empty_label">No offers yet</string>
    <string name="comments_empty_label">No comments yet</string>
    <string name="messages_empty_label">No messages yet</string>
    <string name="users_empty_label">No users found</string>
    <string name="favorites_empty_list_label">No favorites yet</string>

</resources>
