<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/lyProfilePic"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="Profile Photo"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <com.parse.ParseImageView
                    android:id="@+id/ivProfilePic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    android:background="@color/com_facebook_blue"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_icon_profile" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/label_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_box"
                android:gravity="right|center_vertical"
                android:hint="@string/hint_name"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyScreenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/label_screenname"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etScreenName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_box"
                android:gravity="right|center_vertical"
                android:hint="@string/hint_screenname"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lable_email"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_box"
                android:gravity="right|center_vertical"
                android:hint="@string/hint_email"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/label_about_me"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_box"
                android:gravity="right|center_vertical"
                android:hint="@string/hint_description"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/label_location"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_box"
                android:gravity="right|center_vertical"
                android:hint="@string/hint_location"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/label_website"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_box"
                android:gravity="right|center_vertical"
                android:hint="@string/hint_website"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyMapSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/label_location"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNewLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_box"
                android:gravity="right|center_vertical"
                android:hint="@string/hint_tap_to_select"
                android:padding="10dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>