<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gabiq.youbid.fragment.MessageListFragment">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/btnBidAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:layout_marginLeft="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_bid_accept"
            />

        <Button
            android:id="@+id/btnBidReject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_bid_reject"
            />

    </RelativeLayout>


    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bidListSwipeContainer"
        android:layout_below="@+id/rlHeader"
        android:layout_above="@+id/rlFooter"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lvMessageList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            app:item_margin="5dp" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/rlFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/etPostMessage"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:background="#EEEEEE"
            android:ems="10"
            android:hint="@string/hint_type_message"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:paddingLeft="5dp"
            android:paddingRight="50dp" />

        <ImageView
            android:id="@+id/ivPostMessage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignRight="@id/etPostMessage"
            android:src="@drawable/ic_comment_send" />
    </RelativeLayout>

</RelativeLayout>
